--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-node_modules
-package-lock.json
-.vscode
+port=3000
+apiFindUrl = https://api.publicapis.org/
+apiFindUrlAll = https://api.publicapis.org/entries/
