--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 port=3000
-apiFindUrl = https://api.publicapis.org
+apiFindUrl = https://api.publicapis.org/
 apiFindUrlAll = https://api.publicapis.org/entries
